--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "cowsay": "^1.5.0",
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsftp": "^2.1.3",
+    "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
   },
